# tennis-court-detection

./: .gitignore  main copy.py  main.py  negative.ipynb  pyproject.toml  shot-classifier.ipynb  test.ipynb
config/: pics_blacklist.config.yaml  process_params.config.json  process_params.config.yaml
notebooks/: annotations copy.ipynb  annotations.ipynb  reading_imgs.ipynb  roi copy 2.ipynb  roi copy.ipynb
src/: config.py  court_detector.py
src/schemas/: annotations.py  config.py  testing.py
src/utils/: annotations.py  common.py  errors.py  filters.py  helpers.py  images.py  intersections.py  lines.py  plotting.py  points.py  testing.py  validators.py
tests/: baseline.py  lines.py
