[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tennis-court-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.3",
    "shapely>=2.1.2",
    "tyro>=1.0.13",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
